# libcloudos

./: CMakeLists.txt  LICENSE  README.md
cloudos/: InstallerDialog.hpp
cloudos/core/: Config.hpp  ConfigVector.hpp  IndexName.cpp  IndexName.hpp  IndexedCommandQueue.cpp  IndexedCommandQueue.hpp  Object.cpp  Object.hpp  ShareAble.hpp  command_definitions.hpp  logging.hpp
cloudos/proto/: OS.HW.HDDisk.pb.cc  OS.HW.HDDisk.pb.h  OS.Installer.pb.cc  OS.Installer.pb.h  OS.Network.pb.cc  OS.Network.pb.h  OS.System.pb.cc  OS.System.pb.h  OpenStack.CinderServer.pb.cc  OpenStack.CinderServer.pb.h  OpenStack.GlanceServer.pb.cc  OpenStack.GlanceServer.pb.h  OpenStack.KeystoneClient.pb.cc  OpenStack.KeystoneClient.pb.h  OpenStack.KeystoneServer.pb.cc  OpenStack.KeystoneServer.pb.h  OpenStack.NeutronServer.pb.cc  OpenStack.NeutronServer.pb.h  OpenStack.NovaMetadataClient.pb.cc  OpenStack.NovaMetadataClient.pb.h  Package.MariadbClient.pb.cc  Package.MariadbClient.pb.h  Package.RabbitmqClient.pb.cc  Package.RabbitmqClient.pb.h  VM.ManagementServer.pb.cc  VM.ManagementServer.pb.h
cloudos/system/: ChRootController.cpp  ChRootController.hpp  Command.cpp  Command.hpp  CommandCollectionExecutor.cpp  CommandCollectionExecutor.hpp  Directory.cpp  Directory.hpp  File.cpp  File.hpp  FileTar.cpp  FileTar.hpp  HDDisk.cpp  HDDisk.hpp  Installer.cpp  Installer.hpp  InstallerCoreSystem.cpp  InstallerCoreSystem.hpp  InstallerExtended.cpp  InstallerExtended.hpp  InstallerHostSystem.cpp  InstallerHostSystem.hpp  InstallerManagementSystem.cpp  InstallerManagementSystem.hpp  StepExecutor.cpp  StepExecutor.hpp
cloudos/tools/: IPAddress.cpp  IPAddress.hpp  NetworkElement.hpp  NetworkInterface.cpp  NetworkInterface.hpp  NetworkRoute.cpp  NetworkRoute.hpp  StorageLocal.cpp  StorageLocal.hpp  System.cpp  System.hpp
cloudos/ui/: .kdev_include_paths  Dialog.cpp  Dialog.hpp  DialogInstallerFinished.cpp  DialogInstallerFinished.hpp  DialogInstallerProcess.cpp  DialogInstallerProcess.hpp  DialogLanguage.cpp  DialogLanguage.hpp  DialogModuleSelection.cpp  DialogModuleSelection.hpp  DialogNetwork.cpp  DialogNetwork.hpp  DialogNeutronServerMain.cpp  DialogNeutronServerMain.hpp  DialogStorage.cpp  DialogStorage.hpp  DialogWelcome.cpp  DialogWelcome.hpp
proto/: OS.HW.HDDisk.proto  OS.Installer.proto  OS.Network.proto  OS_Installer.proto  OS_Network.proto  OS_System.proto  OpenStack.CinderServer.proto  OpenStack.GlanceServer.proto  OpenStack.KeystoneClient.proto  OpenStack.KeystoneServer.proto  OpenStack.NeutronServer.proto  OpenStack_CinderServer.proto  OpenStack_GlanceServer.proto  OpenStack_KeystoneClient.proto  OpenStack_KeystoneServer.proto  OpenStack_NeutronServer.proto  OpenStack_NovaMetadataClient.proto  Package_MariadbClient.proto  Package_RabbitmqClient.proto  VM.ManagementServer.proto  VM_ManagementServer.proto
